--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -15,6 +15,7 @@
 .top-bar{
     @extend %flexItemCenter;
     position: relative;
+    z-index: 1;
     padding: 30px 0;
     &__more{
         display:none;
