--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1784,23 +1784,43 @@ html {
 
 .slideshow {
   position: relative;
+  margin: 40px 0;
+}
+@media (max-width: 767.98px) {
+  .slideshow {
+    margin: 30px 0;
+  }
 }
 .slideshow__inner {
   display: flex;
   overflow: hidden;
 }
 .slideshow__item {
+  position: relative;
   flex-shrink: 0;
   width: 100%;
+  padding-top: 34%;
+}
+@media (max-width: 767.98px) {
+  .slideshow__item {
+    padding-top: 50%;
+  }
 }
 .slideshow__img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
 }
 .slideshow__page {
   --color:#fff;
   position: absolute;
-  bottom: 70px;
-  left: 70px;
+  width: 12.8%;
+  bottom: 15%;
+  left: 5.2%;
   display: flex;
   align-items: center;
   column-gap: 24px;
@@ -1811,9 +1831,15 @@ html {
   line-height: 144.444%;
   color: var(--color);
 }
+@media (max-width: 767.98px) {
+  .slideshow__num {
+    font-size: 1.4rem;
+    line-height: 142.857%;
+  }
+}
 .slideshow__slider {
   position: relative;
-  width: 172px;
+  width: 100%;
   height: 4px;
   flex-shrink: 0;
   background: var(--color);
